// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPreviewFooter /> should render a footer with comments counters only 1`] = `
<Counters>
  <div
    className="card-counters__item"
  >
    <div
      className="card-counters__value"
    >
      3
    </div>
    <div>
      <FormattedMessage
        id="comment.count_no_nb"
        values={
          Object {
            "count": 3,
          }
        }
      />
    </div>
  </div>
</Counters>
`;

exports[`<ProposalPreviewFooter /> should render a footer with votes and comments counters 1`] = `
<Counters>
  <div
    className="card-counters__item"
  >
    <div
      className="card-counters__value"
    >
      3
    </div>
    <div>
      <FormattedMessage
        id="comment.count_no_nb"
        values={
          Object {
            "count": 3,
          }
        }
      />
    </div>
  </div>
  <div
    className="card-counters__item"
  >
    <div
      className="card-counters__value"
    >
      42
    </div>
    <div>
      <FormattedMessage
        id="proposal.vote.count_no_nb"
        values={
          Object {
            "count": 42,
          }
        }
      />
    </div>
  </div>
</Counters>
`;

exports[`<ProposalPreviewFooter /> should render a footer with votes counters only 1`] = `
<Counters>
  <div
    className="card-counters__item"
  >
    <div
      className="card-counters__value"
    >
      42
    </div>
    <div>
      <FormattedMessage
        id="proposal.vote.count_no_nb"
        values={
          Object {
            "count": 42,
          }
        }
      />
    </div>
  </div>
</Counters>
`;

exports[`<ProposalPreviewFooter /> should render a footer without counters 1`] = `""`;
